# DigitalCurling-Client-Cpp

./: CMakeLists.txt  README.md  client_config.cmake
include/digitalcurling/client/: client_base.hpp  client_factory.hpp  client_helpers.hpp  i_factory_creator.hpp  i_thinking_engine.hpp  mixed_client.hpp  mixed_doubles_client.hpp  protocol_models.hpp  standard_client.hpp
include/digitalcurling/plugins/: plugin_factory_creator.hpp  plugin_json_converter.hpp
src/: CMakeLists.txt  client_setup.cpp  main.cpp
src/client/: client_base.cpp  client_factory.cpp  mixed_client.cpp  mixed_doubles_client.cpp  standard_client.cpp
src/example/: README.md  rulebased.cpp  rulebased.hpp
